--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@
 
 
 body {
-    
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
 }
 .img1 {
     position: absolute;
@@ -13,6 +15,10 @@ body {
     border-top-right-radius: 8px;
 }
 .rect1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
     position: absolute;
     top: 280px;
     left: 40%;
